--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,29 +1,120 @@
 body {
     background: #1f2937;
-    max-width: 1095px;
-    margin: auto;
     font-family: sans-serif;
+    line-height: 1.4em;
 }
 
 header, #banner {
     padding: 15px;
     color: #ffffff;
+    max-width: 1000px;
+    margin: auto;
+}
+
+#section {
+    background: #ffffff;
+    padding: 20px;
+}
+
+#innersection {
+    max-width: 1000px;
+    margin: auto;
 }
 
 h2 {
     color: #ffffff;
 }
 
-h3 {
+.usp h3 {
     color: #1f2937;
 }
 
-#topnav, #banner, #usps, #subscribe {
+#topnav,
+#banner,
+#usps,
+#subscribe {
     display: flex;
+}
+
+#topnav div,
+#banner div,
+#usps div,
+#subscribe div {
+    flex: 1;
+}
+
+#topnav {
     align-items: center;
 }
 
-#topnav div, #banner div, #usps div, #subscribe div {
-    flex: 1;
+.usp {
+    padding: 20px;
+}
+
+#Herotext,
+#Hero {
+    align-content: center;
+}
+
+#Hero {
+    font-size: 150px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.usp img {
+    display: block;
+    width: 100%;
+    aspect-ratio: 1;
+    border: 4px solid #3678e3;
+    border-radius: 10px;
+}
+
+.usp p,
+.usp h3 {
+    padding: 0 15px;
+    text-align: center;
+}
+
+#testimonials {
+    background: #e5e7eb;
+    padding: 20px;
+}
+
+#subscribe {
+    background: #3678e3;
+    color: #ffffff;
+    padding: 2% 6%;
+    max-width: 700px;
+    border-radius: 7px;
+    align-items: center;
+    margin: auto;
+}
+
+.traitsheader {
+    color: #333333;
+    text-align: center;
+    font-size: 30px;
+}
+
+#Herotext h2 {
+    font-size: 45px;
+}
+
+#joinbtn {
+    text-align: center;
+}
+
+button {
+    background: #3678e3;
+    color: #ffffff;
+    border: 2px solid #ffffff;
+    padding: 5px 20px;
+    border-radius: 5px;
+}
+
+footer {
+    color: #cdcdcd;
+    text-align: center;
 }
 
