--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ header, #banner {
 
 #section {
     background: #ffffff;
-    padding: 20px;
+    padding: 3%;
 }
 
 #innersection {
@@ -85,6 +85,8 @@ div#Herotext {
     margin: auto;
     padding: 5%;
     text-align: center;
+    font-style: italic;
+    font-size: 1.4em;
 }
 
 #tsection {
